add tp level